# node-imagemagick-addon

./: .gitignore  CMakeLists.txt  README.md  REFERENCE.md  binding.gyp  package-lock.json  package.json
src/: imageHandler.cpp  imageHandler.h  main.cpp
